   * ASS allows decimals for outline/shadow - thx Ninelpienel
   * Add "actor" to custom text export - thx mellsaid
   * Improve RTL support - thx OmrSi/darnn
   * Add "Persian" Tesseract OCR dictionary - thx NoRRt
   * Change some combo boxes to allow for better searching
   * Make "sort by" more consistant - thx Skrity
   * Add "Bridge gaps" (in durations) to "Batch convert"
* FIXED:
   * Fix memory leak regarding "mpv" + subtitle change - thx darnn
   * Fix missing space in format WebVTT
   * Fix support for combined Arabic characters in PAC - thx Zehelein
   * mpv frame stepping now updates position - thx Flitskikker
   * Fix issue with TTML and namespace - thx PannenkoekenNL
   * Fix possible crash in "Statistics" - thx Masih
   * Fix for Arabic spell check word split
   * Fix for reverse RTL start/end
   * Add to name to language list is now culture neutral
   * Maintain cursor position during unbreak/break
   * Fix for "disable auto open" of video files - thx Barneyk
   * Fix for rare large font issue - thx Camille
   * Fix for PAC language auto-detect - thx SirEllert
   * Remove colon now leaves first letter in uppercase - thx aucforum
   * Fix ASS font tag with space - thx OmarSi
   * Fix possible crash in expand ocr match - thx Zoltán
   * Allow for large unknown subtitle formats - thx Stefania
   * Fix shadow when exporting ASS/SSA to images - thx von Suppé
   * Fix auto-detect Arabic encoding - thx OmarSi
   * Fix time code reading for format FCP/Image - thx BeoZeBold
   * Keep styles from ttml draft to ASS - thx Bill
   * Fix minor issues for format DVD Studio Pro - thx Mike
   * Fix some issues regarding format TSB4 - thx kamenf
   * Fix "Translation mode" Shortcut not working - thx OmrSi/darnn
   * Fix waveform performance for long texts - thx Skrity
   * Improve handling of advanced ASS tags - thx Skrity


3.5.3 (12th May 2017)
* NEW:
   * New Netflix quality checker - thx askolesov/pavel-belenko