@@ -1,0 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<packages>
+  <package id="zlib.net" version="1.0.4.0" targetFramework="net40" />
+</packages>
