@@ -2,5 +2,4 @@
 <packages>
   <package id="ILRepack" version="2.0.13" targetFramework="net40-client" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net40-Client" />
-  <package id="zlib.net" version="1.0.4.0" targetFramework="net40-Client" />
 </packages>
